# jira-time-tracker

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: jira.rs  mod.rs  settings.rs  timer.rs  updater.rs  worklogs.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/jira/: client.rs  types.rs
src/components/: AddWorklogModal.svelte  TaskItem.svelte  TimerDisplay.svelte  WorklogEditModal.svelte
src/lib/commands/: jira.ts  settings.ts  timer.ts  updater.ts  worklogs.ts
src/lib/state/: settings.svelte.ts  tasks.svelte.ts  timer.svelte.ts  updater.svelte.ts  worklogs.svelte.ts
src/lib/types/: jira.ts  settings.ts  worklog.ts
src/lib/utils/: format.ts
src/views/: CalendarView.svelte  SettingsView.svelte  TasksView.svelte  WorklogsView.svelte
